References and updates

--- a/bib1.bib
+++ b/bib1.bib
@@ -1,6 +1,6 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
-@article{astro-ph/0408250v1,
+@article{poutaviironen,
 	abstract = "We study theoretical X-ray light curves and polarization properties of accretion-powered millisecond pulsars. We assume that the radiation is produced in two antipodal spots at the neutron star surface which are associated with the magnetic poles. We compute the angle-dependent intensity and polarization produced in an electron-scattering dominated plane-parallel accretion shock in the frame of the shock. The observed flux, polarization degree and polarization angle are calculated accounting for special and general relativistic effects. The calculations also extended to the case of nuclear-powered millisecond pulsars -- X-ray bursts. In this case, we consider one spot and the radiation is assumed to be produced in the atmosphere of the infinite Thomson optical depth. The light curves and polarization profiles show a large diversity depending on the model parameters. Presented results can be used as a first step to understand the observed pulse profiles of accretion- and nuclear-powered millisecond pulsars. Future observations of the X-ray polarization will provide a valuable tool to test the geometry of the emission region and its physical characteristics.",
 	archiveprefix = "arXiv",
 	author = "Viironen, Kerttu and Poutanen, Juri",
@@ -16,7 +16,7 @@
 	year = "2004"
 }
 
-@article{astro-ph/0608663v2,
+@article{poutabelo,
 	abstract = "Approximate analytical formulae are derived for the pulse profile produced by small hot spots on a rapidly rotating neutron star. Its Fourier amplitudes and phases are calculated. The proposed formalism takes into account gravitational bending of light, Doppler effect, anisotropy of emission, and time delays. Its accuracy is checked with exact numerical calculations.",
 	archiveprefix = "arXiv",
 	author = "Poutanen, Juri and Beloborodov, Andrei M.",
@@ -32,7 +32,7 @@
 	year = "2006"
 }
 
-@article{astro-ph/0510038v2,
+@article{poutarew2006,
 	abstract = "I review X-ray observations of accretion-powered millisecond pulsars and current theories for formation of their spectra and pulse profiles.",
 	archiveprefix = "arXiv",
 	author = "Poutanen, Juri",
@@ -48,7 +48,7 @@
 	year = "2006"
 }
 
-@misc{1304.2330v1,
+@misc{miller,
 	abstract = "Simultaneous, precise measurements of the mass $M$ and radius $R$ of neutron stars can yield uniquely valuable information about the still uncertain properties of cold matter at several times the density of nuclear matter. One method that could be used to measure $M$ and $R$ is to analyze the energy-dependent waveforms of the X-ray flux oscillations seen during some thermonuclear bursts from some neutron stars. These oscillations are thought to be produced by X-ray emission from hotter regions on the surface of the star that are rotating at or near the spin frequency of the star. Here we explore how well $M$ and $R$ could be determined by generating, and analyzing using Bayesian techniques, synthetic energy-resolved X-ray data that we produce assuming a future space mission having 2--30 keV energy coverage and an effective area of 10 m$^2$, such as the proposed \textit{LOFT} or \textit{AXTAR} missions. We find that if the hot spot is within 10$^\circ$ of the rotation equator, both $M$ and $R$ can usually be determined with an uncertainty of about 10\% if there are $10^6$ total counts from the spot, whereas waveforms from spots within 20$^\circ$ of the rotation pole provide no useful constraints. These constraints can usually be achieved even if the burst oscillations vary with time and data from multiple bursts must be used to obtain 10$^6$ counts from the hot spot. This is therefore a promising method to constrain $M$ and $R$ tightly enough to discriminate strongly between competing models of cold, high-density matter.",
 	archiveprefix = "arXiv",
 	author = "Lo, Ka-Ho and Miller, M. Coleman and Bhattacharyya, Sudip and Lamb, Frederick K.",
@@ -79,7 +79,7 @@
 	year = "2007"
 }
 
-@article{astro-ph/0609325v1,
+@article{cadeau,
 	abstract = "We present raytracing computations for light emitted from the surface of a rapidly-rotating neutron star in order to construct light curves for X-ray pulsars and bursters. These calculations are for realistic models of rapidly-rotating neutron stars which take into account both the correct exterior metric and the oblate shape of the star. We find that the most important effect arising from rotation comes from the oblate shape of the rotating star. We find that approximating a rotating neutron star as a sphere introduces serious errors in fitted values of the star's radius and mass if the rotation rate is very large. However, in most cases acceptable fits to the ratio M/R can be obtained with the spherical approximation.",
 	archiveprefix = "arXiv",
 	author = "Cadeau, Coire and Morsink, Sharon M. and Leahy, Denis and Campbell, Sheldon S.",
@@ -214,5 +214,49 @@
 	url = "http://arxiv.org/abs/astro-ph/0303084v1; http://arxiv.org/pdf/astro-ph/0303084v1",
 	x-fetchedfrom = "arXiv.org",
 	year = "2003"
+}
+
+@article{beloborodov,
+	abstract = "A photon emitted near a compact object at an angle $\alpha$ with respect to the radial direction escapes to infinity at a different angle $\psi&gt;\alpha$. This bending of light is caused by a strong gravitational field. We show that, in a Schwarzschild metric, the effect is described by $1-\cos\alpha=(1-\cos\psi)(1-r_g/R)$ where $R/r_g$ is the emission radius in Schwarzschild units. The formula is approximate and it applies at $R\geq 2r_g$ only, however at these radii it has amazing accuracy, fully sufficient in many applications. As one application we develop a new formulation for the light bending effects in pulsars. It reveals the simple character of these effects and gives their quantitative description with practically no losses of accuracy (for the typical radius of a neutron star $R=3r_g$ the error is 1\%). The visible fraction of a star surface is shown to be $S_v/4\pi R^2=[2(1-r_g/R)]^{-1}$ which is 3/4 for $R=3r_g$. The instantaneous flux of a pulsar comes from one or two antipodal polar caps that rotate in the visible zone. The pulse produced by one blackbody cap is found to be sinusoidal (light bending impacts the pulse amplitude but not its shape). When both caps are visible, the pulse shows a plateau: the variable parts of the antipodal emissions precisely cancel each other. The pulsed fraction of blackbody emission with antipodal symmetry has an upper limit $A_{max}=(R-2r_g)/(R+2r_g)$. Pulsars with $A&gt;A_{max}$ must be asymmetric.",
+	archiveprefix = "arXiv",
+	author = "Beloborodov, Andrei M.",
+	comment = "published = 2002-01-08T21:07:49Z, updated = 2002-01-08T21:07:49Z, accepted to ApJ Letters",
+	doi = "10.1086/339511",
+	eprint = "astro-ph/0201117v1",
+	journal = "Astrophys.J. 566 (2002) L85-L88",
+	month = jan,
+	primaryclass = "astro-ph",
+	title = "{Gravitational Bending of Light Near Compact Objects}",
+	url = "http://arxiv.org/abs/astro-ph/0201117v1; http://arxiv.org/pdf/astro-ph/0201117v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2002"
+}
+
+@article{falkner,
+	author = "Falkner, S.",
+	journal = "Master's thesis (Friedrich-Alexander University of Erlangen-Nuremberg)",
+	title = "{Light Bending around Neutron Stars}",
+	year = "2002"
+}
+
+@article{kaiser,
+	author = "Kaiser, A. D.",
+	journal = "Master's thesis (New York University)",
+	title = "{Computational Experiments in Markov Chain Monte Carlo}",
+	year = "2013"
+}
+
+@article{ensemble1,
+	author = "Goodman, J. and Weare, J.",
+	journal = "Commun. Appl. Math. Comput. Sci. 5, 65--80",
+	title = "{Ensemble Samplers with Affine Invariance}",
+	year = "2010"
+}
+
+@article{tuomi,
+	author = "Tuomi, M.",
+	journal = "Doctoral thesis (University of Turku)",
+	title = "{Multidata inverse problems and Bayesian solution methods in astronomy}",
+	year = "2013"
 }
 
